Added exported, unpacked and cloned solution files, amended com msg

--- a/assets/export/MixedRealityWorkshop/src/CanvasApps/src/ppa_mixedrealityapp_8c5e9/Src/Overview Screen.fx.yaml
+++ b/assets/export/MixedRealityWorkshop/src/CanvasApps/src/ppa_mixedrealityapp_8c5e9/Src/Overview Screen.fx.yaml
@@ -61,3 +61,23 @@
         Y: =280
         ZIndex: =4
 
+    btnTutorial As button:
+        BorderThickness: =0
+        Fill: |-
+            =ColorValue("#066563")
+        Font: =Font.Lato
+        Height: =70
+        HoverFill: |-
+            =ColorValue("#FA7E01")
+        OnSelect: =Navigate('Tutorial Screen', ScreenTransition.Fade
+        RadiusBottomLeft: =20
+        RadiusBottomRight: =20
+        RadiusTopLeft: =20
+        RadiusTopRight: =20
+        Size: =24
+        Text: ="Tutorial Screen"
+        Width: =601
+        X: =21
+        Y: =362
+        ZIndex: =5
+
