--- a/assets/export/MixedRealityWorkshop/src/CanvasApps/src/ppa_mixedrealityapp_8c5e9/Src/Smithsonian 3D Viewer Screen.fx.yaml
+++ b/assets/export/MixedRealityWorkshop/src/CanvasApps/src/ppa_mixedrealityapp_8c5e9/Src/Smithsonian 3D Viewer Screen.fx.yaml
@@ -36,7 +36,7 @@
         Y: =694
         ZIndex: =3
 
-    "'3dSmithsonianViewer' As 'View in 3D (preview)'.pcfdataset":
+    "'3dSmithsonianViewer' As PCF_3DViewer.pcfdataset":
         BackgroundFill: =Color.Transparent
         DisplayMode: =DisplayMode.Edit
         Height: =536
