--- a/assets/export/MixedRealityWorkshop/src/CanvasApps/src/ppa_mixedrealityapp_8c5e9/CanvasManifest.json
+++ b/assets/export/MixedRealityWorkshop/src/CanvasApps/src/ppa_mixedrealityapp_8c5e9/CanvasManifest.json
@@ -1,7 +1,7 @@
 {
   "FormatVersion": "0.24",
   "Header": {
-    "DocVersion": "1.332",
+    "DocVersion": "1.334",
     "MinVersionToLoad": "1.331",
     "MSAppStructureVersion": "2.0"
   },
@@ -13,7 +13,6 @@
       "allowmultiplescreensincanvaspages": false,
       "appinsightserrortracing": false,
       "appinstrumentationcorrelationtracing": false,
-      "asyncnodedelegation": true,
       "autocreateenvironmentvariables": false,
       "backfromhostaction": false,
       "behaviorpropertyui": false,
@@ -42,7 +41,6 @@
       "enableonstart": false,
       "enableonstartnavigate": false,
       "enablepcfmoderndatasets": true,
-      "enablepowerautomatepane": true,
       "enablerowscopeonetonexpand": false,
       "enablerpawarecomponentdependency": true,
       "enablerulespanel": false,
@@ -52,7 +50,6 @@
       "enhanceddelegation": true,
       "enhancedgalleryinitialization": true,
       "errorhandling": false,
-      "excelcompatibility": false,
       "expandedsavedatasupport": true,
       "exportimportcomponents2": true,
       "externalmessage": false,
@@ -64,7 +61,6 @@
       "herocontrols": false,
       "improvedmediacapture": false,
       "improvedtabstopbehavior": true,
-      "impurenodedelegation": true,
       "isemptyrequirestableargument": true,
       "keeprecentscreensloaded": false,
       "longlivingcache": false,
@@ -77,6 +73,7 @@
       "parallelcodegen": false,
       "pdffunction": false,
       "powerfxdecimal": false,
+      "powerfxv1": false,
       "projectionmapping": true,
       "reactformulabar": false,
       "reliableconcurrent": true,
@@ -98,7 +95,7 @@
       "zeroalltabindexes": false
     },
     "Author": "",
-    "BindingErrorCount": 1,
+    "BindingErrorCount": 0,
     "ContainsThirdPartyPcfControls": false,
     "DefaultConnectedDataSourceMaxGetRowsCount": 500,
     "DocumentAppType": "Phone",
@@ -117,7 +114,8 @@
     "ManualOfflineProfileId": "",
     "Name": "Mixed Reality App",
     "OriginatingVersion": "1.326",
-    "ParserErrorCount": 0
+    "ParserErrorCount": 1,
+    "ShowStatusBar": false
   },
   "PublishInfo": {
     "AppName": "Mixed Reality App",
@@ -136,6 +134,7 @@
     "Coral Information Screen",
     "Reef Information Screen",
     "Smithsonian 3D Search Screen",
-    "Smithsonian 3D Viewer Screen"
+    "Smithsonian 3D Viewer Screen",
+    "Tutorial Screen"
   ]
 }
