Corrected pfx formula and added back btn

--- a/assets/export/MixedRealityWorkshop/src/CanvasApps/src/ppa_mixedrealityapp_8c5e9/Src/Overview Screen.fx.yaml
+++ b/assets/export/MixedRealityWorkshop/src/CanvasApps/src/ppa_mixedrealityapp_8c5e9/Src/Overview Screen.fx.yaml
@@ -69,7 +69,7 @@
         Height: =70
         HoverFill: |-
             =ColorValue("#FA7E01")
-        OnSelect: =Navigate('Tutorial Screen', ScreenTransition.Fade
+        OnSelect: =Navigate('Tutorial Screen', ScreenTransition.Fade)
         RadiusBottomLeft: =20
         RadiusBottomRight: =20
         RadiusTopLeft: =20
